--- a/Admin/Views/Home/Index.cshtml
+++ b/Admin/Views/Home/Index.cshtml
@@ -1,23 +1,25 @@
 ﻿@{
     ViewBag.Title = "Admin Paneli";
 }
+<link href="~/Content/font-awesome.min.css" rel="stylesheet" />
+<link href="~/Content/font-awesome.css" rel="stylesheet" />
 <div class="row">
     <div class="col-lg-6 col-lg-offset-3">
         <div class="col margin">
-            <div class="col">
+            <div class="col-sm-12">
                 <a class="btn btn-block btn-default" href="@Url.Action("Index","Ilans")">
-                    <i class="fa fa-list fa-3x"></i><br> <small>İlanlar</small>
+                    <i class="fa fa-list-alt fa-3x"></i><br> <small>İlanlar</small>
                 </a>
             </div>
              <br />
-                <div class="col">
+                <div class="col-sm-6">
                     <a class="btn btn-block btn-default" href="@Url.Action("Index","IlanDetays")">
-                        <i class="fa fa-database fa-3x"></i><br> <small>İlan Detayları</small>
+                        <i class="fa fa-indent fa-3x"></i><br> <small>İlan Detayları</small>
                     </a>
                 </div>
-                <div class="col">
+                <div class="col-sm-6">
                     <a class="btn btn-block btn-default" href="@Url.Action("Index","Kategoris")">
-                        <i class="fa fa-credit-card fa-3x"></i><br> <small>Kategoriler</small>
+                        <i class="fa fa-sliders fa-3x"></i><br> <small>Kategoriler</small>
                     </a>
                 </div>
 
@@ -26,27 +28,28 @@
         <br />
         <div class="col margin">
             
-            <div class="col">
+            <div class="col-sm-6">
                 <a class="btn btn-block btn-default" href="@Url.Action("Index","Users")">
-                    <i class="fa fa-user fa-3x"></i><br> <small>Kullanıcılar</small>
+                    <i class="fa fa-user-circle fa-3x"></i><br> <small>Kullanıcılar</small>
                 </a>
             </div>
-            <div class="col">
+
+            <div class="col-sm-6">
                 <a class="btn btn-block btn-default" href="@Url.Action("Index","UserTypes")">
-                    <i class="fa fa-group fa-3x"></i><br> <small>Kullanıcı Tipleri</small>
+                    <i class="fa fa-users fa-3x"></i><br> <small>Kullanıcı Tipleri</small>
                 </a>
             </div>
         </div>
         <br />
         <div class="col margin">
-            <div class="col">
+            <div class="col-sm-6">
                 <a class="btn btn-block btn-default" href="@Url.Action("Index","Comments")">
-                    <i class="fa fa-commenting fa-3x"></i><br> <small>Yorumlar</small>
+                    <i class="fa fa-weixin fa-3x"></i><br> <small>Yorumlar</small>
                 </a>
             </div>
-            <div class="col">
+            <div class="col-sm-6">
                 <a class="btn btn-block btn-default" href="@Url.Action("Index","Sikayets")">
-                    <i class="fa fa-area-chart fa-3x"></i><br> <small>Şikayetler</small>
+                    <i class="fa fa-warning fa-3x"></i><br> <small>Şikayetler</small>
                 </a>
             </div>
             
