--- a/Admin/Views/Ilans/Delete.cshtml
+++ b/Admin/Views/Ilans/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Ilan</h4>
+    <h4>İlanlar</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
