--- a/Admin/Views/Ilans/Edit.cshtml
+++ b/Admin/Views/Ilans/Edit.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Ilan</h4>
+        <h4>İlanlar</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
