--- a/Admin/Views/Kategoris/Details.cshtml
+++ b/Admin/Views/Kategoris/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Kategori</h4>
+    <h4>Kategoriler</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
