--- a/Admin/Views/Shared/_Layout.cshtml
+++ b/Admin/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
+    <link href="~/Content/font-awesome.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-default">
@@ -17,6 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                
                 @Html.ActionLink("EMLAK", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
@@ -27,7 +30,9 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="@Url.Action("Home","Login")">Çıkış</a></li>
+                            
+                                <li><a href="@Url.Action("Home","Login")">Çıkış</a></li>
+                            
                         </ul>
                     </li>
                 </ul>
@@ -39,11 +44,14 @@
         @RenderBody()
         <hr />
         <footer>
+            
             <p>&copy; @DateTime.Now.Year - EMLAK</p>
         </footer>
     </div>
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
+    <link href="~/Content/font-awesome.css" rel="stylesheet" />
 </body>
 </html>
