--- a/Admin/Views/UserTypes/Details.cshtml
+++ b/Admin/Views/UserTypes/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>UserType</h4>
+    <h4>Kullanıcı Tipleri</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
