--- a/Admin/Views/IlanDetays/Edit.cshtml
+++ b/Admin/Views/IlanDetays/Edit.cshtml
@@ -88,4 +88,5 @@
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/tinymce/tinymce.min.js"></script>
 <script>tinymce.init({ selector: 'textarea' });</script>
