--- a/Web/Views/Ilanlar/Index.cshtml
+++ b/Web/Views/Ilanlar/Index.cshtml
@@ -1,27 +1,36 @@
 ﻿@model IQueryable<Data.Ilan>
+           
 
 @{
     ViewBag.Title = "Anasayfa";
 }
 
-<h2>Index</h2>
+
 @foreach (var ilandetay  in Model)
 {
     
-    <div class="row">
-        <h2>@ilandetay.Title</h2>
+    <div class="row text-center">
+        <p class="text-uppercase"> <h1>@ilandetay.Title</h1></p>
         <div>
-            @Html.Raw(ilandetay.IlanDetay.Aciklama)
-            @Html.Raw(ilandetay.MetreKare)<b>m2</b>
-            <br />  
-            <b> @Html.Raw(ilandetay.Kategori.KategoriAdi)</b>
-            <br />
-            <b>Eklenme Tarihi: </b>@Html.Raw(ilandetay.Tarih)
+            <p class="text-center"> @Html.Raw(ilandetay.IlanDetay.Aciklama)</p>
+            
+               <p class="text-center"> @Html.Raw(ilandetay.MetreKare)<b>m2</b></p>
+           @*<br />*@
+                <p class="text-center"><b>Fiyat: </b>@Html.Raw(ilandetay.Fiyat)<b>TL</b></p>
+           @*<br />*@
+                <p class="text-center"><b>Kategori:  </b>@Html.Raw(ilandetay.Kategori.KategoriAdi)</p>
+           @*<br />*@
+                <p class="text-center"> <b>Ekleyen Kullanıcı: </b>@Html.Raw(ilandetay.User.Name)</p>
+           <br />
+            
         </div>
 
         <div class="well posts-detail">
-           
-            <span class="glyphicon glyphicon-time"></span> @ilandetay.Tarih.ToString()
+           @Html.ActionLink("Devamını oku", "Ilanlar", new { id = ilandetay.Id }, null) |
+            @Html.ActionLink(ilandetay.Kategori.KategoriAdi, "Index", "Ilanlar", new { id = ilandetay.Kategori.Id }, null) |
+            <b>@ilandetay.Comment.Count</b> Yorum |
+            <b>Eklenme Tarihi: </b><span class="glyphicon glyphicon-time"></span> @ilandetay.Tarih.ToString()
+           @*<img class="img-thumbnail pull-right" src="@Url.Action("Avatar", "User", new { id = Model.Id })" />*@ 
             
         </div>
     </div>
