--- a/Admin/Views/Shared/_Layout.cshtml
+++ b/Admin/Views/Shared/_Layout.cshtml
@@ -4,8 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Emlak</title>
+   @*<link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />*@ 
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/font-awesome.css" rel="stylesheet" />
@@ -30,9 +33,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            
-                                <li><a href="@Url.Action("Home","Login")">Çıkış</a></li>
-                            
+                            <li>@Html.ActionLink("Çıkış", "Logout", "Home", null, null)</li>
                         </ul>
                     </li>
                 </ul>
@@ -48,10 +49,11 @@
             <p>&copy; @DateTime.Now.Year - EMLAK</p>
         </footer>
     </div>
-
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
-    <link href="~/Content/font-awesome.css" rel="stylesheet" />
+    
+
+    <script src="~/Scripts/jquery-1.12.4.js"></script>
+    @RenderSection("js", false)
+    
 </body>
 </html>
