--- a/Admin/Views/Ilans/Delete.cshtml
+++ b/Admin/Views/Ilans/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>İlanlar</h4>
+    <h4>Ilan</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -41,6 +41,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Tarih)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Resim)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Resim)
         </dd>
 
         <dt>
