--- a/Admin/Views/Ilans/Index.cshtml
+++ b/Admin/Views/Ilans/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>İlanlar</h2>
+<h2>Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -22,6 +22,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Tarih)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Resim)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Kategori.KategoriAdi)
@@ -48,6 +51,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Tarih)
+        </td>
+        <td>
+            <img src="@Url.Action("Resim",new{@id = item.Id})" width="100" /> 
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Kategori.KategoriAdi)
