--- a/Web/Views/Shared/Header.cshtml
+++ b/Web/Views/Shared/Header.cshtml
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Blog", "Index", "Ilanlar", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Emlak", "Index", "Ilanlar", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -18,7 +18,7 @@
                     @Html.ActionLink("Anasayfa", "Index", "Ilanlar")
                 </li>
                 <li>
-                    @Html.ActionLink("Projeler", "Index", "Projects")
+                    @Html.ActionLink("Kategoriler", "Index", "Kategoris")
                 </li>
                 <li>
                     <a href="#">İletişim</a>
