İletişim sayfası tamamlandı

--- a/Web/Views/Shared/Header.cshtml
+++ b/Web/Views/Shared/Header.cshtml
@@ -21,7 +21,7 @@
                     @Html.ActionLink("Kategoriler", "Index", "Kategoris")
                 </li>
                 <li>
-                    <a href="#">İletişim</a>
+                    @Html.ActionLink("İletişim", "Index", "Contact")
                 </li>
             </ul>
         </div>
