Log yapıldı ve tamamlandı

--- a/Admin/Views/Home/Index.cshtml
+++ b/Admin/Views/Home/Index.cshtml
@@ -52,6 +52,12 @@
                     <i class="fa fa-warning fa-3x"></i><br> <small>Şikayetler</small>
                 </a>
             </div>
+
+            <div class="col-sm-6">
+                <a class="btn btn-block btn-default" href="@Url.Action("Index","Logs")">
+                    <i class="fa fa-area-chart fa-3x"></i><br> <small>İşlem Kayıtları</small>
+                </a>
+            </div>
             
         </div>
     </div>
