--- a/Web/Views/Ilanlar/Show.cshtml
+++ b/Web/Views/Ilanlar/Show.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Ilan Detayları";
 }
 
-<h2>Show</h2>
+
 
 
 <!-- Title -->
@@ -50,7 +50,7 @@ else
                 @Html.TextArea("comment_text", "", 3, 0, new { @class = "form-control" })
             </div>
             <button type="submit" class="btn btn-primary">Gönder</button>
-            <button type="button" class="btn btn-danger pull-right" id="switch_ajax">Ajax ile Gönder</button>
+            <button type="button" class="btn btn-danger pull-right degistirenler" id="switch_ajax">Ajax ile Gönder</button>
         }
     </div>
 
@@ -58,11 +58,11 @@ else
         <span class="pull-right text-success">Ajax qeyfiii</span>
         <h4>Yorum Yaz:</h4>
         @using (Ajax.BeginForm("CommentAjax", null, null, new AjaxOptions
-            {
-                HttpMethod = "POST",
-                OnSuccess = "ShowMessage",
-                UpdateTargetId = "result"
-            }))
+        {
+            HttpMethod = "POST",
+            OnSuccess = "ShowMessage",
+            UpdateTargetId = "result"
+        }))
         {
             <div id="result" class="alert alert-info hide"></div>
 
@@ -74,7 +74,7 @@ else
                 @Html.TextArea("comment_text", "", 3, 0, new { @class = "form-control" })
             </div>
             <button type="submit" class="btn btn-primary">Gönder</button>
-            <button type="button" class="btn btn-success pull-right" id="switch_standart">Eski Usul Gönder</button>
+            <button type="button" class="btn btn-success pull-right degistirenler" id="switch_standart">Eski Usul Gönder</button>
 
         }
     </div>
@@ -84,33 +84,22 @@ else
 {
     @Html.Partial("Comment", comment)
 }
-
 @section js {
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
     <script>
+        $(function () {
+            $(".degistirenler").click(function () {
+                $("#form_standart").toggleClass("hide");
+                $("#form_ajax").toggleClass("hide");
+            });
+        });
+
         function ShowMessage() {
             $("#result").removeClass("hide");
         }
 
-        $(function () {
-            $("#switch_ajax").click(function () {
-                $("#form_standart").addClass("hide");
-                $("#form_ajax").removeClass("hide");
-            });
 
-            $("#switch_standart").click(function () {
-                $("#form_ajax").addClass("hide");
-                $("#form_standart").removeClass("hide");
-            });
-
-            /*
-            $("#switch_ajax,#switch_standart").click(function () {
-
-                $("#form_standart").toggleClass("hide");
-                $("#form_ajax").toggleClass("hide");
-            });
-             */
-        });
     </script>
 
 }
+<script language="javascript" src="http://is.sitekodlari.com/yukaricik1.js"></script>
