--- a/Web/Views/Shared/Login.cshtml
+++ b/Web/Views/Shared/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Web.ViewModel.UserViewModel
 
-<h4>Üye Girişi</h4>
+
 
 @if (TempData["error"] !=null)
 {
@@ -9,15 +9,18 @@
 
 @using (Html.BeginForm("Login", "User", FormMethod.Post))
 {
-    <div class="form-group">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" }) :
-        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-    </div>
+    <div class="well">
+        <h4>Üye Girişi</h4>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" }) :
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" }) :
-        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", type = "password" } })
-    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" }) :
+            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", type = "password" } })
+        </div>
 
-    <button type="submit" class="btn btn-success">Giriş</button>
+        <button type="submit" class="btn btn-success">Giriş</button>
+    </div>
 }
