--- a/Admin/Views/Shared/_Layout.cshtml
+++ b/Admin/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Blog</p>
+            <p>&copy; @DateTime.Now.Year - Emlak & Gayrimenkul</p>
         </footer>
     </div>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
